--- a/car_rental/templates/car_rental/add_car_step1.html
+++ b/car_rental/templates/car_rental/add_car_step1.html
@@ -34,8 +34,8 @@
                 </div>
 
                 <div>
-                    <input type="radio" name="car_type" value="SEDAN" id="type_truck" required class="hidden peer"
-                            {% if car.car_type == "SEDAN" %}checked{% endif %}>
+                    <input type="radio" name="car_type" value="TRUCK" id="type_truck" required class="hidden peer"
+                            {% if car.car_type == "TRUCK" %}checked{% endif %}>
                     <label for="type_truck" 
                            class="flex flex-col items-center p-4 border-2 border-gray-200 rounded-lg cursor-pointer 
                                   hover:shadow-lg transition-all 
@@ -46,8 +46,8 @@
                 </div>
 
                 <div>
-                    <input type="radio" name="car_type" value="SEDAN" id="type_van" required class="hidden peer"
-                            {% if car.car_type == "SEDAN" %}checked{% endif %}>
+                    <input type="radio" name="car_type" value="VAN" id="type_van" required class="hidden peer"
+                            {% if car.car_type == "VAN" %}checked{% endif %}>
                     <label for="type_van" 
                            class="flex flex-col items-center p-4 border-2 border-gray-200 rounded-lg cursor-pointer 
                                   hover:shadow-lg transition-all 
@@ -58,8 +58,8 @@
                 </div>
 
                 <div>
-                    <input type="radio" name="car_type" value="SEDAN" id="type_ev" required class="hidden peer"
-                            {% if car.car_type == "SEDAN" %}checked{% endif %}>
+                    <input type="radio" name="car_type" value="EV" id="type_ev" required class="hidden peer"
+                            {% if car.car_type == "EV" %}checked{% endif %}>
                     <label for="type_ev" 
                            class="flex flex-col items-center p-4 border-2 border-gray-200 rounded-lg cursor-pointer 
                                   hover:shadow-lg transition-all 
