--- a/car_rental/templates/car_rental/add_car_step7.html
+++ b/car_rental/templates/car_rental/add_car_step7.html
@@ -27,7 +27,10 @@
                     </label>
                     <div class="relative">
                         <input type="number" id="price" name="price" min="0" step="10" required
-                               class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 pr-16" placeholder="0">
+                                value="{{ car.price_per_day|default_if_none:'' }}"
+                                class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 pr-16"
+                                placeholder="0">
+
                         <span class="absolute right-4 top-1/2 -translate-y-1/2 text-lg font-semibold text-gray-500">
                             THB
                         </span>
@@ -36,7 +39,9 @@
 
                 <div class="space-y-4">
                     <div>
-                        <input type="radio" name="discount_option" value="FIRST_TIMER_20" id="discount_first_timer" required class="hidden peer">
+                        <input type="radio" name="discount_option" value="FIRST_TIMER_20" id="discount_first_timer" required class="hidden peer"
+                                {% if car.discount_option == 'FIRST_TIMER_20' %}checked{% endif %}>
+
                         <label for="discount_first_timer"
                                class="flex items-center justify-between p-4 border border-gray-300 rounded-lg cursor-pointer transition-all
                                       peer-checked:border-warp-blue peer-checked:ring-2 peer-checked:ring-warp-blue">
@@ -49,7 +54,9 @@
                     </div>
 
                     <div>
-                        <input type="radio" name="discount_option" value="NONE" id="discount_none" required class="hidden peer">
+                        <input type="radio" name="discount_option" value="NONE" id="discount_none" required class="hidden peer"
+                                {% if car.discount_option == 'NONE' %}checked{% endif %}>
+
                         <label for="discount_none"
                                class="flex items-center justify-between p-4 border border-gray-300 rounded-lg cursor-pointer transition-all
                                       peer-checked:border-warp-blue peer-checked:ring-2 peer-checked:ring-warp-blue">
