--- a/car_rental/templates/car_rental/add_car_step7.html
+++ b/car_rental/templates/car_rental/add_car_step7.html
@@ -45,7 +45,7 @@
                         <label for="discount_first_timer"
                                class="flex items-center justify-between p-4 border border-gray-300 rounded-lg cursor-pointer transition-all
                                       peer-checked:border-warp-blue peer-checked:ring-2 peer-checked:ring-warp-blue">
-                            <span class="text-lg font-medium">เสนอส่วนลด 20% สำหรับผู้เช่ารถคันแรกเท่านั้น</span>
+                            <span class="text-lg font-medium">เสนอส่วนลด 20% </span>
                             <span class="w-6 h-6 border-2 border-gray-300 rounded-full flex items-center justify-center
                                          peer-checked:border-warp-blue peer-checked:bg-warp-blue">
                                 <span class="w-3 h-3 bg-white rounded-full hidden peer-checked:block"></span>
